objects/ssot__HealthcareFacility__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AvailabilityExceptionsText__c</fullName>
        <label>Availability Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityCategory__c</fullName>
        <label>Healthcare Facility Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityStatusName__c</fullName>
        <label>Healthcare Facility Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityTypeId__c</fullName>
        <label>Healthcare Facility Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Healthcare Facility Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAlwaysOpen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Always Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsHandicapAccessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Handicap Accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsUrgentCare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Urgent Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsWalkInAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Walk In Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LicensedBedCount__c</fullName>
        <label>Licensed Bed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperationalStatusName__c</fullName>
        <label>Operational Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentHealthcareFacilityId__c</fullName>
        <label>Parent Healthcare Facility</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTypeName__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723127407328_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareFacility_AccountId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>HealthcareFacility_AccountId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1723127407328_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723127423762_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareFacility_HealthcareFacilit_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>HealthcareFacility_HealthcareFacilit_rel</relationshipLabel>
        <relationshipName>rel_1723127423762_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723127457836_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareFacility_LocationId_map_Lo_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>HealthcareFacility_LocationId_map_Lo_rel</relationshipLabel>
        <relationshipName>rel_1723127457836_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>